tests/cli/snapshots/main__cli__generate__fails_to_generate_if_no_config_file.snap
---
source: tests/cli/generate.rs
expression: stderr
---
Error: 
   0: The configuration file '.all-contributorsrc' does not exist

[location]

Backtrace omitted. Run with RUST_BACKTRACE=1 environment variable to display it.
Run with RUST_BACKTRACE=full to include source snippets.
