tests/cli/snapshots/main__cli__generate__fails_to_generate_if_one_file_does_not_exist.snap
---
source: tests/cli/generate.rs
expression: stderr
---
Error: 
   0: The file 'readme.md' does not exist

Location:
   src/generate.rs:27

Backtrace omitted. Run with RUST_BACKTRACE=1 environment variable to display it.
Run with RUST_BACKTRACE=full to include source snippets.
